[package]
name = "tothedeep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = true }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = [ "fmt", "env-filter" ] }
